# uranos

./: .gitignore  Cargo.toml  Licence   Makefile  a.out  asm.txt  config-for-rpi3.txt  flash-rpi3.sh  flash-rpi4.sh  kernel8  kernel8-raspi3  kernel8-raspi3.img  kernel8-raspi4  kernel8-raspi4.img  kernel8-rpi3  kernel8-rpi3.img  kernel8-rpi4  kernel8-rpi4.img  kernel8.img  link.ld  nohup.out  readme.md
.cargo/: aarch64-unknown-none-raspi3.json  config
aarch64/: Cargo.toml
aarch64/src/: lib.rs
boot/: Cargo.toml
boot/src/: boot.S  lib.rs  mode.rs
gdb_container/: Dockerfile
src/: config.rs  drivers.rs  gpio.rs  init.rs  interupts.rs  io.rs  main.rs  mbox.rs  memory.rs  miniuart.rs  scheduler.rs  sync.rs  syscall.rs  uart.rs  userspace.rs  vfs.rs
src/aarch64/: mod.rs
src/boot/: mod.rs  mode.rs
src/devices/: mod.rs  physical.rs
src/drivers/: arm_timer.rs  charbuffer.rs  framebuffer.rs  gpio.rs  mbox.rs  miniuart.rs  rpi3InterruptController.rs  rpi3_interrupt_controller.rs  traits.rs  uart.rs
src/framebuffer/: charbuffer.rs  mod.rs
src/interupt/: gicv2.rs  handlers.rs  interrupts.rs  mod.rs  timer.rs  vector_table.S
src/interupts/: handlers.rs  interruptController.rs  interrupt_controller.rs  interupt_context_saving.S
src/memory/: address.rs  allocator.rs  armv8.rs  attributes.rs  layout.rs  memory_controler.rs  mmu.rs  mod.rs  page_descriptor.rs  table_descriptor.rs
src/scheduler/: change_task.S  init.rs  mod.rs  pid_ret_val_map.rs  special_return_vals.rs  task_context.rs  task_memory_manager.rs  task_stack.rs
src/sync/: futex.rs  mod.rs  mutex.rs  nulllock.rs
src/syscall/: async_syscall.rs  handle_get_write_buffer.rs  print.rs
src/time/: arm.rs  mod.rs
src/userspace/: mod.rs  mutex.rs  neofetch.rs  print.rs  shell.rs  syscall.rs  yutex.rs
uranos-macros/: Cargo.toml
(+43 files in other folders)
