[package]
name = "kernel8"
version = "0.1.0"
authors = ["Mateusz Hurbol <mateusz.hurbol42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { path = "boot" }
aarch64 = {path = "aarch64"}
register = "0.3.3"
#spin = "0.5.2"

[package.metadata.cargo-xbuild]
sysroot_path = "../xbuild_sysroot"

[features]
default = []

raspi4 = []
raspi3 = []
