[package]
name = "kernel8"
version = "0.1.0"
authors = ["Mateusz Hurbol <mateusz.hurbol42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { path = "boot" }
aarch64 = {path = "aarch64"}
register = "0.4.1"
num-derive = "0.3"
cortex-a = "2.8.2"
[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]   



[package.metadata.cargo-xbuild]
sysroot_path = "../xbuild_sysroot"

[features]
default = []

raspi4 = []
raspi3 = []

[profile.release]
debug = true
opt-level=3