[package]
name = "uranos"
version = "0.2.0"
authors = ["Mateusz Hurbol <mateusz.hurbol42@gmail.com>, Piotr Kotara <piotrekkotara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register = "0.5.1"
num-derive = "0.3"
cortex-a = "3.0.3"
# panic-abort = "0.3.2"
r0 = "1.0.0"
static_assertions = "1.1.0"
[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]   



[package.metadata.cargo-xbuild]
sysroot_path = "../xbuild_sysroot"

[features]
default = []

raspi4 = []
raspi3 = []

[profile.release]
debug = true
opt-level=3